--- a/src/app/components/initiatives-list/site-listing/site-listing.scss
+++ b/src/app/components/initiatives-list/site-listing/site-listing.scss
@@ -1,22 +1,30 @@
-  .result-item {
-    font-size: 14px;
-    border: 1px solid #cccccc;
-    color: #595959;
-    padding: 5px;
-    margin-top: 5px;
+.selected {
+  background-color: lightgoldenrodyellow;
+
+  .body-title {
+    text-decoration: underline;
   }
+}
+
+.result-item {
+  font-size: 14px;
+  border: 1px solid #cccccc;
+  color: #595959;
+  padding: 5px;
+  margin-top: 5px;
 
   .body-title {
     min-width: 0;
     margin: 0;
     font-size: 18px;
     font-weight: 500;
-  }
 
-  .body-subtitle {
-    font-size: 12px;
-    color: #595959;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    .body-subtitle {
+      font-size: 12px;
+      color: #595959;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
+}
