--- a/src/app/components/loader/loader.scss
+++ b/src/app/components/loader/loader.scss
@@ -1,9 +1,9 @@
-.loader {
+.full-screen-loader {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
   background: white;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
 }
